fix bug in data loading

--- a/AWSServerlessCoreApp/Views/Home/Index.cshtml
+++ b/AWSServerlessCoreApp/Views/Home/Index.cshtml
@@ -147,7 +147,7 @@
                     <h2 class="section-heading text-white">Details:</h2>
                     @foreach (var technology in @trainingProgram.Technologyies)
                     {
-                        <h3 class="text-faded mb-3">@technology.Name</h3>
+                        <h3 class="text-faded mb-3">@technology.TechnologyName</h3>
                     }
                     <a class="btn btn-light btn-xl sr-button js-scroll-trigger" href="#contact">Get Started!</a>
                 </div>
